--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "body-parser": "^1.14.1",
+    "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "fantasysports": "^0.3.0",
     "mongoose": "^4.2.2",
